tests/snapshots/integration__pgm105_serial_type.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM105
  severity: Info
  message: "Column 'id' on 'legacy_ids' uses a sequence default (serial/bigserial). Prefer GENERATED { ALWAYS | BY DEFAULT } AS IDENTITY for new tables (PostgreSQL 10+). Identity columns have better ownership semantics and are the SQL standard approach."
  file: repos/all-rules/migrations/V004__dont_do_this_types.sql
  start_line: 20
  end_line: 23
