tests/snapshots/integration__pgm108_finding_details.snap
---
source: tests/integration.rs
assertion_line: 437
expression: pgm108
---
- rule_id: PGM108
  severity: Minor
  message: "Column 'payload' on 'events_v2' uses 'json'. Use 'jsonb' instead — it's faster, smaller, indexable, and supports containment operators. Only use 'json' if you need to preserve exact text representation or key order."
  file: repos/all-rules/migrations/V006__json_type.sql
  start_line: 1
  end_line: 5
