tests/snapshots/integration__pgm205_finding_details.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM205
  severity: Critical
  message: "DROP SCHEMA 'myschema' CASCADE drops every object in the schema — tables, views, sequences, functions, and types. This is irreversible. Known affected tables: myschema.orders."
  file: repos/all-rules/migrations/V016__drop_schema_cascade.sql
  start_line: 2
  end_line: 2
