tests/snapshots/integration__pgm402_finding_details.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM402
  severity: Minor
  message: "CREATE INDEX 'idx_products_name': add IF NOT EXISTS for idempotent migrations."
  file: repos/all-rules/migrations/V002__violations.sql
  start_line: 2
  end_line: 2
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'audit_log': add IF NOT EXISTS for idempotent migrations."
  file: repos/all-rules/migrations/V002__violations.sql
  start_line: 9
  end_line: 12
