tests/snapshots/integration__pgm503_finding_details.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM503
  severity: Info
  message: "Table 'settings' uses UNIQUE NOT NULL instead of PRIMARY KEY. Functionally equivalent but PRIMARY KEY is conventional and more explicit."
  file: repos/all-rules/migrations/V003__more_violations.sql
  start_line: 5
  end_line: 9
