tests/snapshots/integration__pgm504_finding_details.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM504
  severity: Info
  message: "Renaming existing table 'accounts' to 'accounts_old' will break all queries, views, and functions referencing the old name."
  file: repos/all-rules/migrations/V005__new_violations.sql
  start_line: 16
  end_line: 16
